// Vitest Snapshot v1

exports[`SwipeCell > SwipeCell bindVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo-block"
>
  <!--v-if-->
  <p
    class="tdesign-mobile-demo-block__summary"
  >
    通过expanded实现父子组件联动
  </p>
  
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      开关
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-switch t-switch--medium t-switch--checked"
      >
        <div
          class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
        >
          <div
            class="t-switch__label t-switch__label--medium t-switch__label--checked"
          >
            <!--v-if-->
            <!---->
          </div>
        </div>
      </div>
      
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-swipe-cell"
  >
    <div
      class="t-swipe-cell__wrapper"
      style="transform: translate3d(0px,0,0);"
    >
      <div
        class="t-swipe-cell__left"
        style="width: auto;"
      >
        <!---->
        
        
      </div>
      <div
        class="t-swipe-cell__content"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            父子组件联动
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      <div
        class="t-swipe-cell__right"
        style="width: auto;"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--danger t-button--shape-square"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            删除
            
          </span>
        </button>
        
        
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell btnsVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo-block"
>
  <!--v-if-->
  <p
    class="tdesign-mobile-demo-block__summary"
  >
    左右两侧都有菜单
  </p>
  
  <div
    class="t-swipe-cell"
  >
    <div
      class="t-swipe-cell__wrapper"
      style="transform: translate3d(0px,0,0);"
    >
      <div
        class="t-swipe-cell__left"
        style="width: auto;"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--primary t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            选择
            
          </span>
        </button>
        
        
        
      </div>
      <div
        class="t-swipe-cell__content"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            左右都有菜单
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      <div
        class="t-swipe-cell__right"
        style="width: auto;"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            收藏
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--danger t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            删除
            
          </span>
        </button>
        
        
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell contentVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo-block"
>
  <!--v-if-->
  <p
    class="tdesign-mobile-demo-block__summary"
  >
    通过直接传入内容或者使用 slot#content 来渲染
  </p>
  
  <div
    class="t-swipe-cell"
  >
    <div
      class="t-swipe-cell__wrapper"
      style="transform: translate3d(0px,0,0);"
    >
      <div
        class="t-swipe-cell__left"
        style="width: auto;"
      >
        <!---->
        
        
      </div>
      <div
        class="t-swipe-cell__content"
      >
        
        <div
          style="padding: 10px;"
        >
          直接写组件
        </div>
        
      </div>
      <div
        class="t-swipe-cell__right"
        style="width: auto;"
      >
        
        <div>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
            role="button"
            style="height: 100%;"
            type="submit"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              收藏
              
            </span>
          </button>
        </div>
        
        
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell disabledVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo-block"
>
  <!--v-if-->
  <p
    class="tdesign-mobile-demo-block__summary"
  >
    是否启用滑动功能
  </p>
  
  <div
    class="t-cell t-cell--middle t-cell--bordered"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      开关
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-switch t-switch--medium"
      >
        <div
          class="t-switch__dot t-switch__dot--medium t-switch__dot--plain"
        >
          <div
            class="t-switch__label t-switch__label--medium"
          >
            <!--v-if-->
            <!---->
          </div>
        </div>
      </div>
      
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-swipe-cell"
  >
    <div
      class="t-swipe-cell__wrapper"
      style="transform: translate3d(0px,0,0);"
    >
      <div
        class="t-swipe-cell__left"
        style="width: auto;"
      >
        <!---->
        
        
      </div>
      <div
        class="t-swipe-cell__content"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            可以滑动
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      <div
        class="t-swipe-cell__right"
        style="width: auto;"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--base t-button--primary t-button--shape-rectangle"
          role="button"
          style="height: 100%;"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            收藏
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-s t-button--base t-button--danger t-button--shape-rectangle"
          role="button"
          style="height: 100%;"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            删除
            
          </span>
        </button>
        
        
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell eventVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo-block"
>
  <!--v-if-->
  <p
    class="tdesign-mobile-demo-block__summary"
  >
    点击事件
  </p>
  
  <div
    class="t-swipe-cell"
  >
    <div
      class="t-swipe-cell__wrapper"
      style="transform: translate3d(0px,0,0);"
    >
      <div
        class="t-swipe-cell__left"
        style="width: auto;"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            选择
            
          </span>
        </button>
        
        
        
      </div>
      <div
        class="t-swipe-cell__content"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
        >
          <div
            class="t-cell__left"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            左右都有内容
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            辅助信息
          </div>
          <!--v-if-->
        </div>
        
      </div>
      <div
        class="t-swipe-cell__right"
        style="width: auto;"
      >
        
        
        
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
          role="button"
          style="height: 100%;"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            删除
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
          role="button"
          style="height: 100%;"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            收藏
            
          </span>
        </button>
        
      </div>
    </div>
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell leftCardVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      左滑大列表
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                
                <img
                  src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/chrome/chrome_48x48.png"
                  style="width: 50px; height: 50px; margin-right: 8px; float: left;"
                />
                
              </div>
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑大列表
              <!--v-if-->
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字一段很长很长的内容文字一段很长很长的内容文字
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                
                <img
                  src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/chrome/chrome_48x48.png"
                  style="width: 50px; height: 50px; margin-right: 8px; float: left;"
                />
                
              </div>
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑大列表
              <!--v-if-->
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字一段很长很长的内容文字一段很长很长的内容文字
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell leftMoreMenuVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      左滑多操作
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑双操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              多操作
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--warning"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              收藏
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--primary"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              编辑
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--danger"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑双操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              多操作
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--warning"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              收藏
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--primary"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              编辑
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--danger"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell leftOneMenuVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      左滑单操作
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell leftTwoMenuVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      左滑双操作
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑双操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              双操作
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--primary"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              编辑
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--danger"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑双操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              双操作
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--primary"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              编辑
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--danger"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
  
</div>
`;

exports[`SwipeCell > SwipeCell mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    SwipeCell 滑动单元格
  </h1>
  <p
    class="summary"
  >
    用来承载列表中的更多操作，通过左右滑动来展示，按钮的宽度固定高度根据列表高度而变化。
  </p>
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      左滑单操作
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      左滑双操作
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑双操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              双操作
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--primary"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              编辑
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--danger"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑双操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              双操作
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--primary"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              编辑
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--danger"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
  
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      左滑多操作
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑双操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              多操作
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--warning"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              收藏
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--primary"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              编辑
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--danger"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-左滑双操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              多操作
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--warning"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              收藏
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--primary"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              编辑
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle t-button--danger"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
  
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      左滑大列表
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                
                <img
                  src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/chrome/chrome_48x48.png"
                  style="width: 50px; height: 50px; margin-right: 8px; float: left;"
                />
                
              </div>
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑大列表
              <!--v-if-->
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字一段很长很长的内容文字一段很长很长的内容文字
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                
                <img
                  src="https://raw.githubusercontent.com/alrra/browser-logos/master/src/chrome/chrome_48x48.png"
                  style="width: 50px; height: 50px; margin-right: 8px; float: left;"
                />
                
              </div>
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左滑大列表
              <!--v-if-->
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字一段很长很长的内容文字一段很长很长的内容文字
              </div>
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      右滑单操作
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--primary t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              选择
              
            </span>
          </button>
          
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-右滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--primary t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              选择
              
            </span>
          </button>
          
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-右滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
      </div>
    </div>
    
  </div>
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      通过expanded实现父子组件联动
    </p>
    
    <div
      class="t-cell t-cell--middle t-cell--bordered"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        开关
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-switch t-switch--medium t-switch--checked"
        >
          <div
            class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
          >
            <div
              class="t-switch__label t-switch__label--medium t-switch__label--checked"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
        </div>
        
      </div>
      <!--v-if-->
    </div>
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              父子组件联动
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      通过直接传入内容或者使用 slot#content 来渲染
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            style="padding: 10px;"
          >
            直接写组件
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <div>
            <button
              aria-disabled="false"
              class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
              role="button"
              style="height: 100%;"
              type="submit"
            >
              <!---->
              <span
                class="t-button__text"
              >
                
                收藏
                
              </span>
            </button>
          </div>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      是否启用滑动功能
    </p>
    
    <div
      class="t-cell t-cell--middle t-cell--bordered"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        开关
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-switch t-switch--medium"
        >
          <div
            class="t-switch__dot t-switch__dot--medium t-switch__dot--plain"
          >
            <div
              class="t-switch__label t-switch__label--medium"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
        </div>
        
      </div>
      <!--v-if-->
    </div>
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              可以滑动
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--primary t-button--shape-rectangle"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              收藏
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--danger t-button--shape-rectangle"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      左右两侧都有菜单
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--primary t-button--shape-rectangle"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              选择
              
            </span>
          </button>
          
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左右都有菜单
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              收藏
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--danger t-button--shape-rectangle"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      点击事件
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              选择
              
            </span>
          </button>
          
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              左右都有内容
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          
          
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              删除
              
            </span>
          </button>
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
            role="button"
            style="height: 100%;"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              收藏
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`SwipeCell > SwipeCell rightMenuVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      右滑单操作
    </p>
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--primary t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              选择
              
            </span>
          </button>
          
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-右滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    style="margin-top: 10px;"
  >
    <!--v-if-->
    <!--v-if-->
    
    <div
      class="t-swipe-cell"
    >
      <div
        class="t-swipe-cell__wrapper"
        style="transform: translate3d(0px,0,0);"
      >
        <div
          class="t-swipe-cell__left"
          style="width: auto;"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-size-m t-button--base t-button--primary t-button--shape-square"
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              选择
              
            </span>
          </button>
          
          
          
        </div>
        <div
          class="t-swipe-cell__content"
        >
          
          <div
            class="t-cell t-cell--middle t-cell--bordered"
          >
            <div
              class="t-cell__left"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__title"
            >
              列表-右滑单操作
              <!--v-if-->
              <!--v-if-->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <!--v-if-->
          </div>
          
        </div>
        <div
          class="t-swipe-cell__right"
          style="width: auto;"
        >
          <!---->
          
          
        </div>
      </div>
    </div>
    
  </div>
  
</div>
`;
